--- a/index.html
+++ b/index.html
@@ -45,58 +45,52 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                         </svg>
                     </button>
+                    <button onclick="selectLanguage('简体中文')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
+                        <span class="flex items-center">
+                            <span class="text-2xl mr-3">🇨🇳</span>
+                            <span class="font-medium">简体中文</span>
+                        </span>
+                        <svg class="w-5 h-5 text-gray-400 group-hover:text-red-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </button>
+                    <button onclick="selectLanguage('繁體中文')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
+                        <span class="flex items-center">
+                            <span class="text-2xl mr-3">🇹🇼</span>
+                            <span class="font-medium">繁體中文</span>
+                        </span>
+                        <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </button>
                     <button onclick="selectLanguage('Español')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
                         <span class="flex items-center">
                             <span class="text-2xl mr-3">🇪🇸</span>
                             <span class="font-medium">Español</span>
                         </span>
-                        <svg class="w-5 h-5 text-gray-400 group-hover:text-red-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                        </svg>
-                    </button>
-                    <button onclick="selectLanguage('Français')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
-                        <span class="flex items-center">
-                            <span class="text-2xl mr-3">🇫🇷</span>
-                            <span class="font-medium">Français</span>
-                        </span>
-                        <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                        </svg>
-                    </button>
-                    <button onclick="selectLanguage('Deutsch')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
-                        <span class="flex items-center">
-                            <span class="text-2xl mr-3">🇩🇪</span>
-                            <span class="font-medium">Deutsch</span>
-                        </span>
                         <svg class="w-5 h-5 text-gray-400 group-hover:text-gray-600 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                         </svg>
                     </button>
-                    <button onclick="selectLanguage('中文')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
+                    <button onclick="selectLanguage('हिन्दी')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
                         <span class="flex items-center">
-                            <span class="text-2xl mr-3">🇨🇳</span>
-                            <span class="font-medium">中文</span>
+                            <span class="text-2xl mr-3">🇮🇳</span>
+                            <span class="font-medium">हिन्दी</span>
                         </span>
                         <svg class="w-5 h-5 text-gray-400 group-hover:text-red-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                         </svg>
                     </button>
-                    <button onclick="selectLanguage('日本語')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
+                    <button onclick="selectLanguage('Tiếng Việt')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
                         <span class="flex items-center">
-                            <span class="text-2xl mr-3">🇯🇵</span>
-                            <span class="font-medium">日本語</span>
+                            <span class="text-2xl mr-3">🇻🇳</span>
+                            <span class="font-medium">Tiếng Việt</span>
                         </span>
                         <svg class="w-5 h-5 text-gray-400 group-hover:text-red-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                         </svg>
                     </button>
-                    <button onclick="selectLanguage('한국어')" class="lang-button w-full text-left p-4 rounded-xl transition duration-200 flex items-center justify-between group">
-                        <span class="flex items-center">
-                            <span class="text-2xl mr-3">🇰🇷</span>
-                            <span class="font-medium">한국어</span>
-                        </span>
-                        <svg class="w-5 h-5 text-gray-400 group-hover:text-blue-500 transition" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    <!-- Removed Korean language button -->
                         </svg>
                     </button>
                     <p class="text-center text-gray-500 mt-4">Scroll for more</p>
